--- a/index.html
+++ b/index.html
@@ -375,8 +375,9 @@
                                     Are you strive for the fast project simplicity and clarity. Great design is born of
                                     those two things.
                                 </p>
-                                <a href="#!" class="project__link"
-                                    >Browse all Projects<svg
+                                <div class="project__action">
+                                    <a href="#!" class="project__link">Browse all Projects </a>
+                                    <svg
                                         width="22"
                                         height="12"
                                         viewBox="0 0 22 12"
@@ -391,7 +392,7 @@
                                             stroke-linejoin="round"
                                         />
                                     </svg>
-                                </a>
+                                </div>
                             </div>
                         </section>
 
@@ -429,7 +430,7 @@
                     <section class="feature__inner">
                         <section class="feature__text">
                             <h2 class="heading lv2">Share the features that help your customers</h2>
-                            <p class="desc lv2">
+                            <p class="desc lv2 feature__desc">
                                 You already know that the customer experience doesn't end with a sale — it's an ongoing
                                 work in progress that companies should be constantly seeking to improve and iterate on.
                             </p>
